Added DarkScrollBase and DarkScrollView
Abstract classes that can be built on top of for scrollable controls.
Use DarkScrollBase for non-GDI rendering and DarkScrollView for GDI
rendering.

--- a/DarkUI/DarkUI.csproj
+++ b/DarkUI/DarkUI.csproj
@@ -41,6 +41,9 @@
     <Compile Include="Config\Colors.cs" />
     <Compile Include="Config\Consts.cs" />
     <Compile Include="Config\Enums.cs" />
+    <Compile Include="Controls\DarkScrollBase.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\DarkButton.cs">
       <SubType>Component</SubType>
     </Compile>
