--- a/DarkUI/DarkUI.csproj
+++ b/DarkUI/DarkUI.csproj
@@ -124,9 +124,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TreeViewIcons.resx</DependentUpon>
     </Compile>
+    <Compile Include="Win32\ControlScrollFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\DarkMenuRenderer.cs" />
     <Compile Include="Renderers\DarkToolStripRenderer.cs" />
+    <Compile Include="Win32\Native.cs" />
+    <Compile Include="Win32\WindowsMessages.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Forms\DarkDialog.resx">
