--- a/DarkUI/DarkUI.csproj
+++ b/DarkUI/DarkUI.csproj
@@ -88,6 +88,12 @@
     </Compile>
     <Compile Include="Controls\EventArgs\ScrollValueEventArgs.cs" />
     <Compile Include="Controls\Items\DarkTreeNode.cs" />
+    <Compile Include="Docking\DarkDockContent.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Docking\DarkDockPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Extensions\BitmapExtensions.cs" />
     <Compile Include="Forms\DarkDialog.cs">
       <SubType>Form</SubType>
@@ -124,10 +130,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TreeViewIcons.resx</DependentUpon>
     </Compile>
-    <Compile Include="Win32\ControlScrollFilter.cs" />
+    <Compile Include="Win32\DarkControlScrollFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\DarkMenuRenderer.cs" />
     <Compile Include="Renderers\DarkToolStripRenderer.cs" />
+    <Compile Include="Win32\DarkDockResizeFilter.cs" />
     <Compile Include="Win32\Native.cs" />
     <Compile Include="Win32\WindowsMessages.cs" />
   </ItemGroup>
@@ -198,6 +205,7 @@
   <ItemGroup>
     <None Include="Resources\node_open_empty.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
