--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -41,17 +41,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\DialogAbout.cs">
+    <Compile Include="Forms\Dialogs\DialogAbout.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\DialogAbout.Designer.cs">
+    <Compile Include="Forms\Dialogs\DialogAbout.Designer.cs">
       <DependentUpon>DialogAbout.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\DialogTest.cs">
+    <Compile Include="Forms\Dialogs\DialogTest.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\DialogTest.Designer.cs">
+    <Compile Include="Forms\Dialogs\DialogTest.Designer.cs">
       <DependentUpon>DialogTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Docking\DockDocument.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Docking\DockDocument.Designer.cs">
+      <DependentUpon>DockDocument.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Docking\DockConsole.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Docking\DockConsole.Designer.cs">
+      <DependentUpon>DockConsole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Docking\DockProperties.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Docking\DockProperties.Designer.cs">
+      <DependentUpon>DockProperties.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Docking\DockProject.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Docking\DockProject.Designer.cs">
+      <DependentUpon>DockProject.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
@@ -66,11 +90,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Forms\DialogAbout.resx">
+    <EmbeddedResource Include="Forms\Dialogs\DialogAbout.resx">
       <DependentUpon>DialogAbout.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\DialogTest.resx">
+    <EmbeddedResource Include="Forms\Dialogs\DialogTest.resx">
       <DependentUpon>DialogTest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Docking\DockDocument.resx">
+      <DependentUpon>DockDocument.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Docking\DockConsole.resx">
+      <DependentUpon>DockConsole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Docking\DockProperties.resx">
+      <DependentUpon>DockProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Docking\DockProject.resx">
+      <DependentUpon>DockProject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -125,6 +161,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\StatusAnnotations_Information_16xLG_color.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\properties_16xLG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\application_16x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Console.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
