Fixed docking groups
Groups were being kept on scope because they weren't being removed from
the region's control array.

--- a/DarkUI/DarkUI.csproj
+++ b/DarkUI/DarkUI.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Docking\DarkToolWindow.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Docking\Items\DarkDockSplitter.cs" />
     <Compile Include="Extensions\BitmapExtensions.cs" />
     <Compile Include="Forms\DarkDialog.cs">
       <SubType>Form</SubType>
