--- a/DarkUI/DarkUI.csproj
+++ b/DarkUI/DarkUI.csproj
@@ -107,6 +107,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Docking\Items\DarkDockSplitter.cs" />
+    <Compile Include="Docking\Items\DarkDockTab.cs" />
     <Compile Include="Extensions\BitmapExtensions.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Forms\DarkDialog.cs">
