Added close buttons to tool windows.

--- a/DarkUI/DarkUI.csproj
+++ b/DarkUI/DarkUI.csproj
@@ -274,6 +274,18 @@
   <ItemGroup>
     <None Include="Resources\inactive-close-selected.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tw_close.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tw_close_selected.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tw_active_close.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tw_active_close_selected.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
