Dock panel serialisation now persists group states.

--- a/DarkUI/DarkUI.csproj
+++ b/DarkUI/DarkUI.csproj
@@ -127,8 +127,10 @@
     <Compile Include="Docking\DarkDockSplitter.cs" />
     <Compile Include="Docking\DarkDockTab.cs" />
     <Compile Include="Docking\DarkDockTabArea.cs" />
-    <Compile Include="Docking\DockContentEvenArgs.cs" />
+    <Compile Include="Docking\DockContentEventArgs.cs" />
+    <Compile Include="Docking\DockGroupState.cs" />
     <Compile Include="Docking\DockPanelState.cs" />
+    <Compile Include="Docking\DockRegionState.cs" />
     <Compile Include="Extensions\BitmapExtensions.cs" />
     <Compile Include="Extensions\IEnumerableExtensions.cs" />
     <Compile Include="Forms\DarkDialog.cs">
