--- a/DarkUI/DarkUI.csproj
+++ b/DarkUI/DarkUI.csproj
@@ -309,6 +309,9 @@
   <ItemGroup>
     <None Include="Resources\small_arrow.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\scrollbar_disabled.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
