--- a/DarkUI/DarkUI.csproj
+++ b/DarkUI/DarkUI.csproj
@@ -134,6 +134,9 @@
     </Compile>
     <Compile Include="Controls\DarkTreeNode.cs" />
     <Compile Include="Controls\ScrollValueEventArgs.cs" />
+    <Compile Include="Controls\ToolStripDarkComboBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Docking\DarkDockArea.cs" />
     <Compile Include="Docking\DarkDockContent.cs">
       <SubType>UserControl</SubType>
